fix md too narrow

--- a/css/style.css
+++ b/css/style.css
@@ -1281,6 +1281,10 @@ html {
   list-style-type: none;
 }
 
+.list-disc {
+  list-style-type: disc;
+}
+
 .appearance-none {
   -webkit-appearance: none;
      -moz-appearance: none;
@@ -2212,6 +2216,14 @@ html {
 
 .pb-5 {
   padding-bottom: 1.25rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pl-4 {
+  padding-left: 1rem;
 }
 
 .text-left {
@@ -3269,6 +3281,14 @@ body[data-nav="true"] > #moveUp > #arrow-back {
     height: 60vh;
   }
 
+  .md\:h-full {
+    height: 100%;
+  }
+
+  .md\:max-h-full {
+    max-height: 100%;
+  }
+
   .md\:w-1\/4 {
     width: 25%;
   }
@@ -3285,8 +3305,20 @@ body[data-nav="true"] > #moveUp > #arrow-back {
     width: 82.5;
   }
 
+  .md\:w-1\/3 {
+    width: 33.333333%;
+  }
+
   .md\:min-w-\[5vw\] {
     min-width: 5vw;
+  }
+
+  .md\:max-w-full {
+    max-width: 100%;
+  }
+
+  .md\:flex-row {
+    flex-direction: row;
   }
 
   .md\:text-\[4\.5vw\] {
